Change tips to use components instead of strings